2026-09-13 후속 재검증 반영: zt-exec start()의 timeout 무시, 시간 초과 예외와 stopper의 스레드 분리, 프로세스 그룹 종료의 적용 범위를 본문에 보완. 검증 기록은 기본 검증 문서 9절로 합치고 패치 파일은 삭제
Co-Authored-By: Claude Fable 5.1 <noreply@anthropic.com>